--- a/privacy.html
+++ b/privacy.html
@@ -48,6 +48,22 @@
     <h2>7. 개인정보처리방침의 변경 및 고지의무</h2>
     <p>본 개인정보처리방침은 법령의 변경이나 내부 방침에 따라 변경될 수 있으며, 개인정보처리방침을 변경할 경우 앱 내 공지사항 또는 이메일을 통해 사전에 알려드리겠습니다.</p>
 
+    <h2>8. 개인정보의 열람 및 삭제 요청 방법</h2>
+    <p>사용자는 언제든지 본인의 개인정보 열람 및 삭제를 요청할 수 있습니다. 개인정보 열람 및 삭제를 원하시면, 아래 이메일로 문의해 주세요. 요청 즉시 처리하겠습니다.</p>
+    <ul>
+    <li>이메일: merry.heeheehee@gmail.com</li>
+    </ul>
+
+    <h2>9. 사용자 데이터 삭제 요청 방법</h2>
+    <p>사용자는 원더픽 앱 이용 중 수집된 개인 데이터(이메일 주소, 닉네임, SNS 연동정보 등)의 일부 또는 전체 삭제를 요청할 수 있습니다. 데이터 삭제 요청은 아래의 이메일을 통해 접수하실 수 있으며, 접수된 요청은 신속하게 처리됩니다.</p>
+
+    <ul>
+    <li><strong>데이터 삭제 요청 이메일</strong>: merry.heeheehee@gmail.com</li>
+    <li>이메일 작성 시 '데이터 삭제 요청'임을 명시하시고, 삭제를 원하는 데이터를 명확히 알려주시기 바랍니다.</li>
+    </ul>
+
+    <p>요청이 접수된 후 확인 및 처리가 완료되면, 이메일로 회신을 드립니다.</p>
+
     <p>본 개인정보처리방침은 2025년 3월 4일부터 시행됩니다.</p>
 
 </body>
